:bug: added z-index

--- a/src/style/_cookie-banner.scss
+++ b/src/style/_cookie-banner.scss
@@ -6,6 +6,7 @@
     color: $secondary-light;
     border: 3px solid $primary-accessory;
     padding: 15px;
+    z-index: 999;
 
     .cookie-txt {
         margin: 0 0 10px;
